Bluewolf SFMTA/src/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accessibility Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Specification Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHP Inspection Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPUC Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Safe Streets Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application and Acknowledgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Disruption Prevention Plan</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Inspection__c</fullName>
        <label>Last Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Documents</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Documents</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>